<resources>
    <string name="app_name">Achu</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="maybe">Maybe</string>
    <string name="notsay">Prefer not to say</string>
    <string name="done">Done</string>

    <string name="later">I will do it later</string>
    <string name="doit">Let\'s start</string>

    <!--units and stuff-->
    <string name="kg">kg</string>
    <string-array name="kg">
        <item>kilogram</item>
        <item>kilograms</item>
    </string-array>

    <string name="lb">lb</string>
    <string-array name="lb">
        <item>pound</item>
        <item>pounds</item>
    </string-array>

    <string name="m">m</string>
    <string-array name="m">
        <item>meter</item>
        <item>meters</item>
    </string-array>
    <string name="cm">cm</string>
    <string-array name="cm">
        <item>centimeter</item>
        <item>centimeters</item>
    </string-array>

    <string name="ft">ft</string>
    <string-array name="ft">
        <item>foot</item>
        <item>feet</item>
    </string-array>
    <string name="in4">in</string>
    <string-array name="in4">
        <item>inch</item>
        <item>inches</item>
    </string-array>

    <string name="goodMorning">Good Morning</string>
    <string name="goodAfternoon">Good Afternoon</string>
    <string name="goodDay">Good Day</string>
    <string name="goodEvening">Good Evening</string>
    <string name="hello">Hello</string>

    <!-- Strings related to Settings -->
    <string name="PREFERENCE_FILE_ID">com.chepel.achu.PREFERENCE_FILE_ID</string>
    <string name="opts_uid">cred.uid</string>
    <string name="opts_email">email</string>
    <string name="opts_authenticator">cred.auth</string>
    <string name="opts_xtra">cred.xtra</string>
    <string name="opts_key">cred.key</string>
    <string name="opts_key_key">cred.key.key</string>

    <string name="opts_name">name</string>
    <string name="opts_lastname">last.name</string>
    <string name="opts_sex">sex</string>
    <string name="opts_age">age</string>
    <string name="opts_height">height</string>
    <string name="opts_weight">weight</string>

    <string name="opts_loginCounter">login.counter</string>
    <string name="opts_lastLogin">login.last</string>

    <string name="pref_header_general">General</string>

    <string name="pref_title_use_location">Access my location</string>
    <string name="opts_use_location">use.location</string>
    <string name="pref_use_location_summary">This helps predicting health risks based on location and weather</string>

    <string name="pref_title_units">Measurement units</string>
    <string name="opts_units">units</string>
    <string-array name="pref_units_titles">
        <item>Imperial (lb, F, mile)</item>
        <item>Metric (kg, C, km)</item>
    </string-array>
    <string-array name="pref_units_values">
        <item>1</item>
        <item>0</item>
    </string-array>
    <string name="pref_title_my_info">My information</string>
    <string-array name="pref_authenticators">
        <item>Achu</item>
        <item>Google</item>
        <item>Facebook</item>
        <item>Amazon</item>
        <item>Twitter</item>
    </string-array>
    <string-array name="pref_authenticators_values">
        <item>achu</item>
        <item>googel</item>
        <item>faceoff</item>
        <item>amaze</item>
        <item>twister</item>
    </string-array>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="sign_in_excl">Sign In!</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">Contacts permissions are needed for providing email completions.</string>
    <string name="already_have_an_account">Already have an account?</string>


    <string name="title_activity_my_info">My Information</string>

    <!-- Strings related to my info -->
    <string name="sign_up_to_achu">Sign up to Achu</string>
    <string name="prompt_name">First name</string>
    <string name="prompt_lastname">Last name</string>
    <string name="prompt_sex">Gender</string>
    <string-array name="genders">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
        <item>Rather not to say</item>
    </string-array>
    <string-array name="units">
        <item>Imperial</item>
        <item>Metric</item>
    </string-array>
    <string name="prompt_age">Year born</string>
    <string name="unspec">unspecified</string>
    <string name="numtag">numtag</string>
    <string name="num2tag">num2tag</string>
    <string name="label_weight">Weight</string>
    <string name="label_height">Height</string>
    <string name="label_age">Age</string>
    <string name="label_male">Male</string>
    <string name="label_female">Female</string>

    <!--UI strings-->
    <string name="action_settings">Settings</string>
    <string name="title_tips">Tips</string>
    <string name="title_offers">Offers</string>
    <string name="title_radar">Radar</string>
    <string name="title_rewards">Rewards</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_maps">Map</string>

    <!--dashboard-->
    <string name="title_dashboard">Dashboard</string>
    <string name="dashboard_slogan">View the sickness patterns discovered in your health data</string>

    <!--hot cards-->

    <string name="dash_risk">You are at %s %s</string>
    <string name="dash_risk_slogan">Chance of a recurring illness based on your most recent data.</string>
    <string name="dash_risk_low">low risk</string>
    <string name="dash_risk_moderate">moderate risk</string>
    <string name="dash_risk_high">High Risk</string>

    <!--cards string-->
    <string name="card_suffix_match">Match</string>
    <string name="card_slogan_suffix">Match</string>
    <!--<string name="card_slogan_suffix">Health Data Match</string>-->

    <string name="card_heart">Heart</string>
    <string name="card_heart_slogan">Heart patterns in your bracelet data correlated to your health.</string>
    <string name="card_heart_rate">Heart Rate</string>
    <string name="card_blood_pressure">Blood Pressure</string>
    <string name="card_blood_oxygen">Blood Oxygen</string>

    <string name="card_weather">Weather</string>
    <string name="card_weather_slogan">Weather patterns in your area correlated to your health.</string>
    <string name="card_weather_temperature">Temperature</string>
    <string name="card_weather_pressure">Pressure</string>
    <string name="card_weather_humidity">Humidity</string>
    <string name="card_weather_pollution">Air Pollution</string>

    <string name="card_activity">Activity</string>
    <string name="card_activity_slogan">Activity patterns in your bracelet data correlated to your health.</string>
    <string name="card_activity_steps">Steps</string>
    <string name="card_activity_active">Active</string>
    <string name="card_activity_inactive">Inactive</string>

    <string name="card_sleep">Sleep</string>
    <string name="card_sleep_slogan">Sleep patterns in your bracelet data correlated to your health.</string>
    <string name="card_sleep_bedtime">Bed Time</string>
    <string name="card_sleep_waketime">Wake Time</string>
    <string name="card_sleep_total">Total Sleep</string>
    <string name="card_sleep_quality">Sleep Quality</string>

    <!--calibrate-->
    <string name="title_activity_calibrate">Symptom selector</string>
    <string name="action_calibrate">Symptom selector</string>
    <string name="symp_nose_run">Runny Nose &amp; sneezing</string>
    <string name="symp_congest">Nasal Congestion</string>
    <string name="symp_sinus">Sinus pressure &amp; Pain</string>
    <string name="symp_sore_throat">Sore Throat Pain</string>
    <string name="symp_fever">Fever, Aches &amp; Chills</string>
    <string name="symp_wet_cough">Cough with Mucus &amp; Phlegm</string>
    <string name="symp_dry_cough">Cough</string>
    <string name="symp_headache">Headache</string>
    <string name="symp_insomnia">Nighttime, Insomnia</string>
    <string name="symp_confirm">Confirm Symptoms</string>
    Confirm Symptoms
    <!--today-->
    <string name="title_activity_today">Daily Check-up</string>
    <string name="today_slogan">Your feedback will be used to train your algorithm to make more accurate sickness predictions.</string>
    <string name="today_energy">Energy Level</string>
    <string name="today_wellness">Overall Wellness</string>
    <string name="today_confirm">Confirm</string>
    <string name="today_report">Report symptoms</string>
    <string name="title_activity_habits">Habits</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!--habits-->
    <string name="habit_casually">Casually</string>
    <string name="how_it_works">Learn how Achu works</string>

    <string name="habit_info_title">Awesome!</string>
    <string name="habit_info_paragraph1">Before we get started, we need to ask you a few questions to understand your habits better.</string>
    <string name="habit_info_paragraph2">This will help us make more accurate sickness predictions. Your answers will not be shared with anyone.</string>
    <string name="habit_info_paragraph3">It will not take more the 2 minutes of your time</string>

    <string name="habit_title_1">Health Survey</string>
    <string name="habit_slogan_1">Do you smoke tobacco products?</string>
    <string name="habit_title_2">Health Survey</string>
    <string name="habit_slogan_2">Do you drink alcoholic beverages ?</string>
    <string name="habit_title_3">Health Survey</string>
    <string name="habit_slogan_3">Do you exercise regularly?</string>
    <string name="habit_title_4">Health Survey</string>
    <string name="habit_slogan_4">Do you experience high levels of stress?</string>
</resources>
