<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="My information">
        <EditTextPreference
            android:defaultValue="Default value"
            android:key="edit_text_preference_1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="First Name" />

        <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
             dismiss it. -->
        <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    </PreferenceCategory>

    <PreferenceCategory android:title="Optional">
        <EditTextPreference
            android:defaultValue="Default value"
            android:key="edit_text_preference_1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="Last Name" />

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/pref_units_titles"
            android:entryValues="@array/pref_units_values"
            android:key="@string/opts_units"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/prompt_sex" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/opts_use_location"
            android:summary="@string/pref_use_location_summary"
            android:title="@string/pref_title_use_location" />
        <ListPreference
            android:defaultValue="1"
            android:entries="@array/pref_units_titles"
            android:entryValues="@array/pref_units_values"
            android:key="@string/opts_units"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_units" />
    </PreferenceCategory>

</PreferenceScreen>
