<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp"
    tools:context="com.chepel.krug.HabitsIntroFragment">

    <TextView
        android:layout_marginTop="48dp"
        android:id="@+id/introTitle"
        style="@style/achuATitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/habit_info_title"/>

    <TextView
        android:id="@+id/introParagraph1"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textColorPrimary"
        app:layout_constraintTop_toBottomOf="@+id/introTitle"
        android:text="@string/habit_info_paragraph1"/>

    <TextView
        android:id="@+id/introParagraph2"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textColorPrimary"
        app:layout_constraintTop_toBottomOf="@+id/introParagraph1"
        android:text="@string/habit_info_paragraph2"/>

    <TextView
        android:id="@+id/introParagraph3"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textColorSecondary"
        app:layout_constraintTop_toBottomOf="@+id/introParagraph2"
        android:text="@string/habit_info_paragraph3"/>

    <Button
        android:id="@+id/btn_how_works"
        style="@style/achuCancelButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/how_it_works"
        android:textSize="18sp"
        android:textColor="@color/achuAltGreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnOK"/>

    <Button
        android:id="@+id/btnOK"
        style="@style/achuGreenButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btn_skip"
        android:text="@string/doit"/>

    <Button
        android:id="@+id/btn_skip"
        style="@style/achuCancelButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/later"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>
