<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp"
    tools:context="com.chepel.krug.HabitsActivity$HabitsStepFragment">

    <TextView
        android:layout_marginTop="64dp"
        android:id="@+id/stepTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textAllCaps="true"
        android:textColor="@color/textColorSecondary"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/habit_title_1"/>

    <TextView
        android:id="@+id/step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:typeface="monospace"
        android:textColor="@color/textColorPrimary"
        app:layout_constraintBaseline_toBaselineOf="@id/stepTitle"
        app:layout_constraintEnd_toStartOf="@+id/steps"
        tools:text="2" />

    <TextView
        android:id="@+id/steps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:typeface="monospace"
        android:textColor="@color/textColorSecondary"
        app:layout_constraintBaseline_toBaselineOf="@id/stepTitle"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="/4" />

    <TextView
        android:id="@+id/stepSlogan"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/textColorPrimary"
        app:layout_constraintTop_toBottomOf="@id/stepTitle"
        tools:text="@string/habit_slogan_1"/>

    <RadioGroup
        android:layout_marginTop="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/stepSlogan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <android.support.v7.widget.AppCompatRadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:buttonTint="@color/achuAltGreen"
            android:textColor="@drawable/text_color_selector"
            android:text="@string/no" />
        <android.support.v7.widget.AppCompatRadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:buttonTint="@color/achuAltGreen"
            android:textColor="@drawable/text_color_selector"
            android:text="@string/yes"
            />
        <android.support.v7.widget.AppCompatRadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:buttonTint="@color/achuAltGreen"
            android:textColor="@drawable/text_color_selector"
            android:text="@string/habit_casually"
            tools:checked="true"
            />
        <android.support.v7.widget.AppCompatRadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:buttonTint="@color/achuAltGreen"
            android:textColor="@drawable/text_color_selector"
            android:text="@string/notsay"
            />

    </RadioGroup>

    <Button
        android:id="@+id/btnOK"
        style="@style/achuGreenButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/next"/>

</android.support.constraint.ConstraintLayout>